feat: simplify and remove code
